@@ -1,8 +1,14 @@
 function build_project
 {
-  for p in debug release test mtest profile doc
+  TCS=""
+  type gcc > /dev/null && TCS="$TCS local"
+  type icc > /dev/null && TCS="$TCS intel"
+  for tc in $TCS
   do
-    make PROFILE="$p" || return $?
+    for p in debug release test mtest profile doc
+    do
+      make PROFILE="$p" || return $?
+    done
   done
   return 0
 }
