@@ -1,4 +1,7 @@
 -- v?? --
+* SharedPtrNotNULL const-fixes.
+* support for intel compiler updated.
+* build process v1.7.1 introduced.
 
 -- v0.8.0 --
 * average and standard deviation computation algorithm has been introduced.
